# cc

./: CMakeLists.txt  README.md  main.c  run.sh
include/: link_list.h  stack.h  stack_linked.h  table.h  tree.h
src/: link_list.c  stack.c  stack_linked.c  table.c  tree.c
